# chat-template

./: .cursorignore  .gitignore  AGENT.md  CHANGELOG.md  Dockerfile  Makefile  README.md  environment.yml  evals_config.yaml  pyproject.toml  requirements.txt
.cursor/: .cursorrules
.cursor/commands/: create-issue.md  deployed-resources.md  github-pm.md  intro.md  security-review.md  submit-pr.md
.cursor/rules/: aws_strategy.mdc  bash_set_e.mdc  public_repo_strategy.mdc  python_code_standards.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
config/: app_config.template.yaml  app_config.yml
docs/: architecture-diagram.drawio  aurora_data_api_migration.md  aws_naming_convention.md  aws_organizations.md  code_standards.md  config_structure.md  deployment_process.md  development_process.md  gh_project_setup.md  github_environment_secrets.md  github_pm_command.md  lambda_vpc_s3_setup.md  oidc_github_identity_provider_setup.md
evals/: README.md  __init__.py  aggregate_evals.py  cli.py  client.py  config.py  data.py  evals_config.yaml  evals_pipeline.py  judge_validation.py  judge_validation.yaml  llm_factory.py  metrics_base.py  metrics_custom.py  metrics_ragas.py  outputs.py  pipeline.py  requirements.txt  run_ragas.py  stats_utils.py
infra/: README.md  infra.yaml
scripts/: setup_branch_protection.sh  setup_env.sh
sql/: eda.sql  embeddings_table_setup.sql
src/: chat_app_lambda.py  main.py  retrieval.py
tests/: test_api_lambda.py  test_chat_handler.py  test_graph_smoke.py  test_memory_store.py  test_rag.py  test_ragas_pipeline.py
(+131 files in other folders)
