[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chat-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-aws>=1.0.0",
    "langchain-postgres>=0.0.10",
    "ragas>=0.2.0",
    "psycopg[binary]>=3.1.0",
    "fastapi",
    "uvicorn",
    "boto3",
    "pydantic>=2.0.0",
    "pyyaml",
    "pytest",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
